--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mongodb": "^3.5.8"
+    "mongodb": "^3.5.8",
+    "pg": "^8.2.1"
   }
 }
